--- a/indice/estilo_index.css
+++ b/indice/estilo_index.css
@@ -4,7 +4,7 @@ html, body {
     box-sizing: border-box;
     font-family: Arial, sans-serif;
     background-color: #fff;
-    color: #222;
+    color: #002b8c;
     height: 100%;
     width: 100%;
     overflow: hidden;
@@ -37,13 +37,37 @@ body {
     width: 100%;
     margin-bottom: 10px;    
 }
+.lado-derecho h2{
+    font-size: 30px;
+}
 .custom-label {
-    font-size: 20px;
+    color: #002b8c;
     margin-bottom: 8px;
+    font-size: 18px;
+}
+
+input[type="text"],
+input[type="password"] {
+    width: 100%;
+    padding: 12px 10px;
+    border: 1px solid #d1e0fa;
+    border-radius: 8px;
+    font-size: 20px;
+    background: #f4f6fb;
+    margin-bottom: 4px;
+    transition: border 0.2s;
+    height: 35px;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus {
+    border: 1.5px solid #195591;
+    outline: none;
+    background: #fff;
 }
 .lado-izquierdo {
     width: 35%;
-    background: #002b8c;
+    background: #0a3a6a;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -51,11 +75,7 @@ body {
     justify-content: center;
     padding: 40px;
     min-height: 100vh;
-}
-
-.lado-izquierdo .logo {
-    max-width: 180px;
-    margin-bottom: 24px;
+    font-size: 20px;
 }
 
 .lado-izquierdo h2,
@@ -86,7 +106,7 @@ input {
     transition: border-color 0.2s;
 }
 .lado-derecho button {
-    background-color: #002b8c;
+    background-color: #0a3a6a;
     color: #fff;
     font-size: 20px;
     padding: 16px 40px;
@@ -100,6 +120,26 @@ input {
 }
 
 .lado-derecho button:hover {
-    background-color: #001f5c;
+    background-color: #072b50;
+}
+.btn-empleado {
+    position: fixed;
+    right: 32px;
+    bottom: 32px;
+    background-color: #0a3a6a;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    padding: 14px 28px;
+    font-size: 1em;
+    font-weight: bold;
+    box-shadow: 0 2px 8px rgba(0,43,140,0.10);
+    cursor: pointer;
+    transition: background 0.2s;
+    z-index: 1000;
 }
 
+.btn-empleado:hover {
+    background-color: #072b50
+;
+}
